Fix line breaks on code fences

--- a/.vitepress/theme/code.scss
+++ b/.vitepress/theme/code.scss
@@ -16,6 +16,7 @@ main .vp-doc {
     padding: 12px 0 !important;
     code {
       padding: 0 22px !important;
+      white-space: pre-wrap !important;
     }
   }
   div[class*='language-'] > button.copy {
